k8s/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-k8s
spec:
  selector:
    app: hello-k8s
  ports:
    - protocol: TCP
      port: 8080
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s
spec:
  selector:
    matchLabels:
      app: hello-k8s
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
        - name: hello-8s
          image: harbor.lab.winterfell.live/cody/hello-k8s:latest
          imagePullPolicy: Always
